[package]
name = "nekobp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
ntex = { version = "0.7.13", features = ["tokio"] }
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.35.0", features = ["full"] }
